# bch

./: .gitignore  README.md  bch.py  main.py  pyproject.toml
test/: inserted-text.txt  lipsum.txt  lipsum.txt_new
