[project]
name = "bch"
version = "0.1.0"
description = "Tool to extract, insert, and patch raw binary data without corrupting the rest of the file"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
# Optional but recommended
authors = [
  { name = "Watari", email = "watari@techwebunraveled.xyz" }
]
license = { text = "MIT" }
keywords = ["binary", "patching", "reverse engineering", "file tools"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
